adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis repudiandae natus, molestias amet temporibus eos magnam corporis laboriosam, ducimus eius dicta cum dolore asperiores, fugiat nostrum illo possimus pariatur consequatur!</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus culpa voluptas perferendis hic, doloribus alias architecto nemo quaerat ex laboriosam perspiciatis! Voluptatem expedita perspiciatis nostrum qui, beatae nisi ducimus suscipit.</p>
 </body>
 </html>
